# CircuitPython_UsefulSensors_PersonDetector

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  usefulsensors_persondetector.py
examples/: usefulsensors_persondetector_simpletest.py
