# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2022 Luke Berndt for Robotastic
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-usefulsensors-persondetector"
description = ""
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/robotastic/CircuitPython_UsefulSensors_PersonDetector"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "usefulsensors_persondetector",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["usefulsensors_persondetector"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
